Fix mobile UI alignment on settings page

--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -135,11 +135,22 @@ section form {
     #settings-box {
         width: 100%;
     }
+    #settings {
+        width: 100%;
+
+    }
+    section {
+        align-items: center;
+    }
     section h1 {
         align-self: flex-start;
     }
     section form {
         flex-direction: column;
-        align-items: flex-start;
+        /*align-items: flex-start;*/
+        min-width: 75%;
+    }
+    #shared-privacy #shared-privacy-visibility {
+        width: 75%;
     }
 }
